- 01-08-04: Added Athena GM Commands - @speed. [AlexKreuz]
- 04-08-04: Added #glevel GM command for faster guild testing. [KyuubiKitsune]
- 04-07-04: Added Weiss.ini options to edit Colors and Fonts. [AlexKreuz]
- 04-07-04: Added Athena GM Commands - @who3. [AlexKreuz]
- 04-07-04: Added Athena GM Commands - @who2. [AlexKreuz]
- 04-07-04: Added Athena GM Commands - @who. [AlexKreuz]
- 04-07-04: Added Athena GM Commands - @jump. [AlexKreuz]
- 04-07-04: Added Athena GM Commands - @jumpto, @warpto. [AlexKreuz]
- 04-07-04: Added Athena GM Commands - @where. [AlexKreuz]
- 04-07-04: Added Athena GM Commands - @rura, @warp. [AlexKreuz]
- 04-07-04: Added Athena GM Commands - @rura+, @send, @warp+, @charwarp. [AlexKreuz]
- 04-07-04: Renamed #greaper to #ironical. [AlexKreuz]
- 04-07-04: Had to re-fix some set-math logic in Game - mea culpa :o [ChrstphrR]
- 04-07-04: Tidying up routine in Game unit, translating original Japanese comments in code (No functional code changes) (3rd time) [ChrstphrR]
- 04-07-04: Added 'RUN' Skill, fixed a few checks up and started tracking monster status.  [Darkhelmet]
- 04-07-04: Added #greaper GM command. (Grim Reaper - For scaring the kiddies). [AlexKreuz]
- 04-07-04: Fixed Stats and Options reset upon walk request, bug. [AlexKreuz]
- 04-07-04: Added Athena-Style Username_MF Registration Method Option. [AlexKreuz]
- 04-07-04: Updated Ashura, now works in combo mode.  Test this more in PvP (PvM seems OK). [Colus]
- 04-06-04: Added Support for item database effects 200, 201. [Darkhelmet]
- 04-06-04: Updated Monster AI again. [Darkhelmet]
- 04-06-04: Added Loops before Freeing some lists when Fusion closes down - reduces some of the memory leaks and dangling pointers. [ChrstphrR]
- 04-05-04: Adding more AI updates and AI Range Check errors fixes. [Darkhelmet]
- 04-05-04: Added Assign method to ItemDB class. [ChrstphrR]
- 04-05-04: Documented/clarified param/var names for Item container routines [ChrstphrR]