@@ -1,3 +1,11 @@
+- 01-08-04: Added Athena GM Commands - @kami, @kamib. [AlexKreuz]
+- 01-08-04: Added Athena GM Commands - @alive. [AlexKreuz]
+- 01-08-04: Added Athena GM Commands - @kill. [AlexKreuz]
+- 01-08-04: Added Athena GM Commands - @die. [AlexKreuz]
+- 01-08-04: Added Athena GM Commands - @jobchange. [AlexKreuz]
+- 01-08-04: Added Athena GM Commands - @hide. [AlexKreuz]
+- 01-08-04: Added Athena GM Commands - @option. [AlexKreuz]
+- 01-08-04: Added Athena GM Commands - @storage. [AlexKreuz]
 - 01-08-04: Added Athena GM Commands - @speed. [AlexKreuz]
 - 04-08-04: Added #glevel GM command for faster guild testing. [KyuubiKitsune]
 - 04-07-04: Added Weiss.ini options to edit Colors and Fonts. [AlexKreuz]
